feat(ui): motor de flexbox inteligente, menus de contexto globais e estabilização do editor
Esta atualização introduz melhorias massivas na arquitetura de renderização W3C e estabilidade de componentes:

[Layout Engine]
- Implementado o sistema "User Agent Stylesheet" via isGreedyByDefault() na NativeTag.
- Tags estruturais (<tabs>, <tab>, <editor>) agora comunicam instintos de crescimento ao motor, eliminando a necessidade de flex-grow redundante no CSS XPL.

[Editor de Código]
- Corrigido o glitch de renderização/saltos ao pressionar Enter: o MetadataScanner agora só aciona o Platform.runLater quando há mutação real na cor.
- Implementada ilusão de margem infinita usando -fx-background-color com linear-gradient e quebra rígida.
- Interceção do clique direito diretamente na CodeArea para evitar perda de seleção de texto ao abrir menus de contexto.

[Menus de Contexto (W3C)]
- Atributo "context-menu" promovido a Atributo Global (suportado por qualquer tag).
- ContextMenuTag refatorada para atuar puramente como construtora em memória (nó fantasma), delegando a invocação para a NativeTag.
- MenuHelper atualizado para suportar recursividade (sub-menus) e injeção gráfica de ícones nativos.
- Atualização do HtmlTagUtils para validar as novas tags de menu sem alertar erros no terminal.